    + [NT] Use self-closing tags (if possible) and do not write
      attributes with an empty value.
  * lib/Util.pm:
    + [NT] Stricten the parser to not accept a field name with a ":".
      This could cause the parser to eat the first part of the value,
      if it contained a colon and there was no space before the vaue.
      Thanks to Pino Toscano for reporting the issue.

 -- Niels Thykier <niels@thykier.net>  Sat, 10 Sep 2011 13:44:01 +0200

lintian (2.5.3) unstable; urgency=low

  The "Another 51 bites the dust.  169 left to go." release.

  * Summary of tag changes:
    + Added:
      - boilerplate-copyright-format-uri
      - control-file-is-not-a-file
      - comma-separated-files-in-dep5-copyright
      - copyright-has-crs
      - debian-copyright-is-symlink
      - depends-on-packaging-dev
      - dh_installmanpages-is-obsolete
      - missing-field-in-dep5-copyright
      - missing-license-paragraph-in-dep5-copyright
      - missing-license-text-in-dep5-copyright
      - no-debian-copyright
      - obsolete-field-in-dep5-copyright
      - out-of-date-copyright-format-uri
      - package-contains-no-arch-dependent-files
      - perl-module-uses-perl4-libs-without-dep
      - readme-debian-contains-invalid-email-address
      - script-uses-perl4-libs-without-dep
      - syntax-error-in-dep5-copyright
      - unknown-copyright-format-uri
      - unknown-paragraph-in-dep5-copyright
      - unused-license-paragraph-in-dep5-copyright
      - unversioned-copyright-format-uri
      - vim-addon-within-vim-runtime-path
      - wiki-copyright-format-uri
    + Removed:
      - debian-changelog-file-contains-debmake-default-email-address
      - readme-debian-contains-debmake-default-email-address
      - script-calls-init-script-directly

  * checks/*:
    + [NT] Dropped fields from Needs-Info, it is no longer needed.
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.  (Closes: #637595)