@@ -67,6 +67,10 @@
         <td>{$delta{info}}</td>
       </tr>
       <tr>
+        <td><span class="type-P">P</span> Pedantic tags:</td>
+        <td>{$delta{pedantic}}</td>
+      </tr>
+      <tr>
         <td><span class="type-O">O</span> Overridden tags:</td>
         <td>{$delta{overridden}}</td>
       </tr>
